apps/selenium/templates/chrome-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome-node
  labels:
    app: selenium-chrome-node
    app.kubernetes.io/instance: selenium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-chrome-node
      app.kubernetes.io/instance: selenium
  template:
    metadata:
      labels:
        app: selenium-chrome-node
        app.kubernetes.io/instance: selenium
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: tempdata
          emptyDir: {}
        - name: nginxconf
          configMap:
            name: chrome-node-nginx-config
            defaultMode: 0777
      containers:
        - name: selenium-chrome-node
          image: selenium/node-chrome:4.8.3-20230403
          ports:
            - containerPort: 5555
              protocol: TCP
          resources:
            requests:
              memory: 200Mi
            limits:
              memory: 500Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: tempdata
              mountPath: /var/selenium/tempdata
        - name: nginx
          # Pulled April 17, 2023
          image: nginx@sha256:63b44e8ddb83d5dd8020327c1f40436e37a6fffd3ef2498a6204df23be6e7e94
          volumeMounts:
            - name: tempdata
              mountPath: /var/selenium/tempdata
            - name: nginxconf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginxconf
              mountPath: /docker-entrypoint.d/99-setuser.sh
              subPath: setuser.sh
      terminationGracePeriodSeconds: 30
