apps/selenium/templates/chrome-node-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome-node-nginx
spec:
  selector:
    app: selenium-chrome-node
  ports:
  - name: "80"
    port: 80
